# sber_sst_ai_tts

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: const.py  main.py
app/sber/: get_token.py  sber.db
app/sber/ai_agent/: ai_agent.py
app/sber/sql/: create_db.py  get_tokens_from_db.py  update_tokens_in_db.py
app/sber/synthesizer/: synthesizer.py
app/sber/transcriber/: transcriber.py
app/web/: server.py
app/web/static/: index.html
playground/: recognition_pb2.py  recognition_pb2_grpc.py  sandbox.py  sandbox2.py
